RESOLVED FIXED200778
Yellow Lookup highlight gets stuck over Mail messages
https://bugs.webkit.org/show_bug.cgi?id=200778
Summary Yellow Lookup highlight gets stuck over Mail messages
Tim Horton
Reported 2019-08-15 12:11:01 PDT
Yellow Lookup highlight gets stuck over Mail messages
Attachments
Patch (1.61 KB, patch)
2019-08-15 12:11 PDT, Tim Horton
no flags
Patch (1.89 KB, patch)
2019-08-15 12:14 PDT, Tim Horton
no flags
Patch (1.85 KB, patch)
2019-08-15 12:16 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-08-15 12:11:19 PDT
Tim Horton
Comment 2 2019-08-15 12:11:22 PDT
Tim Horton
Comment 3 2019-08-15 12:14:44 PDT
Tim Horton
Comment 4 2019-08-15 12:16:41 PDT
Wenson Hsieh
Comment 5 2019-08-15 12:19:04 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 6 2019-08-15 12:22:25 PDT
(In reply to Wenson Hsieh from comment #5) > Comment on attachment 376406 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=376406&action=review > > > Source/WebKitLegacy/mac/WebView/WebView.mm:9511 > > + [weakSelf.get() _clearTextIndicatorWithAnimation:TextIndicatorWindowDismissalAnimation::FadeOut]; > > Nit - I don’t think the .get() is necessary here. Oops, never mind — I take that back :/
WebKit Commit Bot
Comment 7 2019-08-15 13:21:12 PDT
Comment on attachment 376406 [details] Patch Clearing flags on attachment: 376406 Committed r248741: <https://trac.webkit.org/changeset/248741>
WebKit Commit Bot
Comment 8 2019-08-15 13:21:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.