Cherry-pick r248741. rdar://problem/54360841

Yellow Lookup highlight gets stuck over Mail messages
    https://bugs.webkit.org/show_bug.cgi?id=200778
    <rdar://problem/53868514>

    Reviewed by Wenson Hsieh.

    * WebView/WebView.mm:
    (-[WebView _showDictionaryLookupPopup:]):
    Add a dismissal callback so that when Reveal hides the panel, it also
    dismisses the yellow indicator. This matches the behavior in modern WebKit.

    Canonical link: https://commits.webkit.org/214520@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248741 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.256@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248745 268f45cc-cd09-0410-ab3c-d52691b4dbfc